# platypus.rust

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  test-config.rs  test-env-config.toml
.github/workflows/: rust.yml
examples/demo/: .gitignore  Makefile  README.md  config.lua  config.toml  server.sh
platypus/: Cargo.toml
platypus/src/: lib.rs  monitor.rs  request.rs  response.rs  router.rs  server.rs  service.rs  source.rs  writer.rs
platypus/src/pool/: aws_secrets_manager.rs  mod.rs
platypus/src/protocol/: binary.rs  meta.rs  mod.rs  text.rs
platypus/src/protocol/text/: mod.rs
platypus/src/source/: aws_secrets_manager.rs  echo.rs  file.rs  http.rs  merge.rs  mod.rs
procyon/: Cargo.toml
procyon/src/: lib.rs
procyon/src/protocol/: mod.rs
procyon/src/protocol/text/: mod.rs
server/: Cargo.toml
server/src/: config.rs  main.rs
src/: main.rs
tests/: Cargo.toml  README.md  config.toml  integration_test.rs  setup.rs
