[workspace]
resolver = "3"
members = ["platypus", "server", "tests"]

[workspace.dependencies]
async-memcached = "0.5.0"
anyhow = { version = "1.0.98", default-features = true }
async-trait = "0.1.89"
byteorder = "1.5.0"
clap = { version = "4.5.40", features = ["derive"] }
futures = "0.3.31"
log = "0.4.21"
memcache = "0.18.0"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tokio-util = "0.7.15"
toml = "0.8"
tower = { version = "0.5.2", features = ["timeout", "util"] }
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
