[package]
name = "platypus"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
byteorder.workspace = true
futures.workspace = true
log.workspace = true
memcache.workspace = true
regex.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower.workspace = true
tracing.workspace = true
reqwest.workspace = true
serde_json.workspace = true
url.workspace = true
