[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
clap.workspace = true
futures.workspace = true
log.workspace = true
platypus = { path = "../platypus" }
serde.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
