[package]
name = "integration-tests"
version = "0.1.0"
edition = "2024"

[dependencies]
platypus = { path = "../platypus" }
async-memcached.workspace = true
memcache.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde_json.workspace = true

[[test]]
name = "integration_test"
path = "integration_test.rs"
